--- a/faq.html
+++ b/faq.html
@@ -44,7 +44,7 @@
             <section>
                 <header>
                     <div class="part-1">
-                        <img src="/images/logo.jpeg" alt="Fun2Learn Logo">
+                        <img src="images/logo.jpeg" alt="Fun2Learn Logo">
                         <a href="/">
                             <h6>Fun2Learn<span class="focus">.</span></h6><br>
                         </a>
